# Kairos

./: .cproject  .project  CMakeLists.txt  README.md
python/: CMakeLists.txt
src/: CMakeLists.txt  Constants.h  Geometry.h  Io.cpp  Io.h  Kairos.cpp  Kairos.h  MyRandom.h  NextSubvolumeMethod.cpp  NextSubvolumeMethod.h  Operator.cpp  Operator.h  ReactionEquation.h  Species.cpp  Species.h  StructuredGrid.cpp  StructuredGrid.h  StructuredGrid.impl.h  Vector.h  nsvc.cpp  nsvc.h
