
LINK_DIRECTORIES(${Kairos_BINARY_DIR}/lib)
set(CMAKE_CPP_FLAGS_DEBUG  "${CMAKE_CPP_FLAGS_DEBUG} -DBOOST_DEBUG_PYTHON" )
include_directories(${Kairos_INCLUDE_DIRECTORIES} ${PYTHON_INCLUDE_DIRS})
PYTHON_ADD_MODULE(pyKairos python.cpp)

TARGET_LINK_LIBRARIES(pyKairos Kairos ${Boost_LIBRARIES})
install (TARGETS pyKairos DESTINATION lib)